[tool.poetry]
name = "MHLog"
version = "0.1.0"
description = ""
authors = ["sakakibaraki <afrohage@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyocr = "^0.8.3"
opencv-python = "^4.6.0"
PyAutoGUI = "^0.9.53"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
